--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic/storage": "1.1.7",
-    "ionic-angular": "2.0.0-rc.5",
-    "ionic-native": "2.2.11",
+    "angularfire2": "^2.0.0-beta.7",
+    "firebase": "^3.6.9",
+    "ionic-angular": "^2.0.0-rc.5",
+    "ionic-native": "^2.2.11",
     "ionicons": "3.0.0",
     "rxjs": "5.0.0-beta.12",
     "sw-toolbox": "3.4.0",
@@ -45,5 +47,5 @@
     "ionic-plugin-keyboard"
   ],
   "cordovaPlatforms": [],
-  "description": "myApp: An Ionic project"
+  "description": "spanApp: An Ionic project"
 }
