--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
     "@ionic-native/diagnostic": "^3.4.4",
+    "@ionic-native/firebase": "^3.4.4",
     "@ionic/storage": "1.1.7",
     "angularfire2": "^2.0.0-beta.7",
     "firebase": "^3.6.9",
