--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/platform-server": "2.2.1",
+    "@ionic-native/core": "^3.4.4",
     "@ionic-native/diagnostic": "^3.4.4",
     "@ionic-native/firebase": "^3.4.4",
     "@ionic/storage": "1.1.7",
